--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@
 
 :root {
   --main-font-family: "Poppins", sans-serif;
+  --second-title-color: #4d533c;
+  --main-link-color: #d4d6d4;
+  --hover-link-color: #ffd723;
 }
 
 body {
@@ -47,13 +50,23 @@ img {
 .link {
   display: inline-flex;
   align-items: center;
-  border-bottom: 1px solid currentColor;
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
+  color: var(--main-link-color);
+  line-height: 1;
+  transition: color 0.3s ease-in-out;
+}
+
+.hero__link,
+.link:hover {
+  color: var(--hover-link-color);
+}
+
+.link span {
+  border-bottom: 1px solid currentColor;
   text-indent: 6px;
-  color: #d4d6d4;
 }
 
 .link svg {
@@ -128,6 +141,8 @@ img {
 
 .hero {
   padding-top: 188px;
+  padding-bottom: 100px;
+  min-height: 811px;
   background-image: url("../assests/img/hero_bg.jpg");
   background-position: center;
   background-size: cover;
@@ -141,12 +156,133 @@ img {
 }
 
 .hero__subtitle {
+  display: inline-block;
+  margin-bottom: 22px;
   font-size: 14px;
   line-height: 21px;
 }
 
 .hero__title {
-  font-weight: 700; /* Указывать  числом, а не словом, т.к. */
+  margin: 0;
+  margin-bottom: 24px;
+  font-weight: 700;
   font-size: 60px;
   line-height: 74px;
+}
+
+.hero__description {
+  margin: 0;
+  margin-bottom: 45px;
+}
+
+.services {
+  padding-top: 140px;
+  padding-bottom: 154px;
+  margin-bottom: -180px;
+}
+
+.services__title {
+  margin: 0;
+  margin-bottom: 87px;
+  max-width: 607px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 46px;
+  color: var(--second-title-color);
+}
+
+.services__subtitle {
+  margin: 0;
+  margin-bottom: 20px;
+  max-width: 183px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 34px;
+  text-transform: uppercase;
+  color: var(--second-title-color);
+}
+
+.services__descriptin {
+  margin-bottom: 30px;
+  max-width: 194px;
+  font-size: 14px;
+  line-height: 26px;
+  color: rgba(33, 56, 66, 0.6);
+}
+
+.services__list {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.services__list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.services__link {
+  margin-top: auto;
+  margin-bottom: 36px;
+}
+
+.get-started {
+  position: relative;
+  top: 180px;
+  width: 88%;
+  padding: 70px 0;
+  background: #fafafa;
+  box-shadow: 50px 130px 100px rgba(0, 0, 0, 0.145947);
+}
+
+.get-started__title {
+  margin: 0;
+  margin-bottom: 50px;
+  max-width: 822px;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 74px;
+  color: var(--second-title-color);
+}
+
+.get-started__link {
+  text-transform: uppercase;
+}
+
+.footer {
+  padding-top: 310px;
+  background-image: url("../assests/img/footer_bg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #ffffff;
+}
+
+.footer__top {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 52px;
+  border-bottom: 1px solid #5d6544;
+}
+
+.footer__contacts-item:not(:last-child) {
+  margin-right: 128px;
+}
+
+.footer__contacts-text {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 16px;
+  line-height: 40px;
+  color: #b6c197;
+}
+
+.footer__contacts-value {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 40px;
+  color: #ffffff;
+  font-style: normal;
+  text-decoration: none;
 }
